--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: dom-manipulation-js
+title: Using DOM functions
 hero_image: images/banner.png
 description: Using DOM functions in JavaScript
 version: 4
